# hagrid

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  constants.py  ddp_run.sh  demo.py  demo_ff.py  download.py  pyproject.toml  requirements.txt  run.py
classifier/: dataset.py  metrics.py  preprocess.py  run.py  train.py  utils.py
classifier/config/: default.yaml
classifier/models/: lenet.py  mobilenetv3.py  resnet.py  vit.py
configs/: ConvNeXt_base.yaml  LeNet.yaml  MobileNetV3_large.yaml  MobileNetV3_small.yaml  ResNet152.yaml  ResNet18.yaml  ResNet50.yaml  ResNext101.yaml  ResNext50.yaml  RetinaNet_ResNet50.yaml  SSD300_Vgg16.yaml  SSDLiteMobileNetV3Large.yaml  SSDLiteMobileNetV3Small.yaml  VitB16.yaml  VitB32.yaml
converter/: convert_to_coco_annotation.py  converter_config.yaml
converters/: convert_utils.py  converter_config.yaml  hagrid_to_coco.py  hagrid_to_yolo.py
custom_utils/: ddp_utils.py  train_utils.py  utils.py
dataset/: __init__.py  dataset.py
detector/: dataset.py  model.py  preprocess.py  run.py  ssd_mobilenetv3.py  train.py  utils.py
detector/config/: default.yaml
detector/models/: __init__.py  fasterrcnn.py  ssd_mobilenetv3.py
models/: __init__.py  model.py
models/classifiers/: __init__.py  base_model.py  lenet.py  vit.py
models/detectors/: __init__.py  retinanet.py  ssd300_vgg.py  ssd_mobilenetv3.py
